maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:35: error: ':' expected but ',' found.
def aMurSud(x,y):Boolean = {  // test mur au SUD
             ^JediEscaper:49: error: identifier expected but '}' found.
}
^